Fix login link color on mobile menu

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -274,7 +274,8 @@ header {
     font-size: 1.5rem;
 }
 
-.offcanvas-body > .navbar-nav > .nav-item > .nav-link {
+.offcanvas-body > .navbar-nav > .nav-item > .nav-link,
+#mobile-top-nav-container > .navbar-nav > .nav-item > .nav-link {
     color: var(--secondary-text);
 }
 
